[gd_scene load_steps=20 format=2]

[ext_resource path="res://scenes/DialogSettings/DialogSettings.gd" type="Script" id=1]
[ext_resource path="res://assets/sounds/click.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/sounds/Bad Answer 13.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/black_overlay_bg.png" type="Texture" id=4]
[ext_resource path="res://assets/dialogbox.png" type="Texture" id=5]
[ext_resource path="res://assets/icon_settings.png" type="Texture" id=6]
[ext_resource path="res://assets/graham.tres" type="DynamicFont" id=7]
[ext_resource path="res://assets/btn_1.png" type="Texture" id=8]
[ext_resource path="res://assets/btn_pressed_1.png" type="Texture" id=9]
[ext_resource path="res://assets/btn_2.png" type="Texture" id=10]
[ext_resource path="res://assets/btn_pressed_2.png" type="Texture" id=11]
[ext_resource path="res://assets/btn_3.png" type="Texture" id=12]
[ext_resource path="res://assets/btn_pressed_3.png" type="Texture" id=13]
[ext_resource path="res://assets/btn_4.png" type="Texture" id=14]
[ext_resource path="res://assets/btn_pressed_4.png" type="Texture" id=15]
[ext_resource path="res://assets/btn_5.png" type="Texture" id=16]
[ext_resource path="res://assets/btn_pressed_5.png" type="Texture" id=17]
[ext_resource path="res://assets/close_scene.png" type="Texture" id=18]

[sub_resource type="Animation" id=1]
resource_name = "WobbleWindow"
length = 0.7
step = 0.01
tracks/0/type = "bezier"
tracks/0/path = NodePath("../../..:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"points": PoolRealArray( -70, -0.0738588, -0.0638924, 0.0738588, 0.0638924, 0, -0.0689853, -0.661118, 0.0689853, 0.661118, -140, -0.0823214, -0.661118, 0.0823214, 0.661118, 0, -0.0847149, -0.202782, 0.0847149, 0.202782, -140, -0.10863, -0.0749969, 0.10863, 0.0749969, 0, -0.168366, 0.0638924, 0.168366, -0.0638924 ),
"times": PoolRealArray( 0, 0.09, 0.19, 0.29, 0.4, 0.6 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("..:rect_position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.0703247, -0.77354, 0.0703247, 0.77354, 70, -0.102316, 0.90728, 0.102316, -0.90728, -70, -0.116415, 0.358788, 0.116415, -0.358788, 70, -0.108985, -0.700233, 0.108985, 0.700233, -70, -0.101479, 0.0430908, 0.101479, -0.0430908, 0, -0.212497, 0.77354, 0.212497, -0.77354 ),
"times": PoolRealArray( 0, 0.09, 0.19, 0.29, 0.4, 0.6 )
}

[node name="TimerSettings" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="Sfx" type="Node" parent="."]

[node name="Click" type="AudioStreamPlayer" parent="Sfx"]
stream = ExtResource( 2 )
volume_db = -5.0
pitch_scale = 0.7

[node name="Wrong" type="AudioStreamPlayer" parent="Sfx"]
stream = ExtResource( 3 )
volume_db = -5.0
pitch_scale = 0.7

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 2048.0
margin_bottom = 1536.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
expand = true

[node name="CenterContainer" type="CenterContainer" parent="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="TextureRect/CenterContainer"]
margin_left = 238.0
margin_top = 213.0
margin_right = 1810.0
margin_bottom = 1322.0
texture = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/CenterContainer/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="IconSettings" type="CenterContainer" parent="TextureRect/CenterContainer/TextureRect/VBoxContainer"]
margin_right = 1572.0
margin_bottom = 314.0

[node name="MarginContainer" type="MarginContainer" parent="TextureRect/CenterContainer/TextureRect/VBoxContainer/IconSettings"]
margin_left = 656.0
margin_right = 916.0
margin_bottom = 314.0
custom_constants/margin_top = 55

[node name="TextureRect" type="TextureRect" parent="TextureRect/CenterContainer/TextureRect/VBoxContainer/IconSettings/MarginContainer"]
margin_top = 55.0
margin_right = 260.0
margin_bottom = 314.0
texture = ExtResource( 6 )

[node name="Text" type="CenterContainer" parent="TextureRect/CenterContainer/TextureRect/VBoxContainer"]
margin_top = 318.0
margin_right = 1572.0
margin_bottom = 609.0

[node name="MarginContainer" type="MarginContainer" parent="TextureRect/CenterContainer/TextureRect/VBoxContainer/Text"]
margin_left = 254.0
margin_right = 1317.0
margin_bottom = 291.0
custom_constants/margin_top = 30

[node name="Label" type="Label" parent="TextureRect/CenterContainer/TextureRect/VBoxContainer/Text/MarginContainer"]
margin_top = 30.0
margin_right = 1063.0
margin_bottom = 291.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.517647, 0.290196, 0.509804, 1 )
text = "Dieser Bereich ist geschützt
Bitte tippen Sie ein:"
align = 1

[node name="CodeSequence" type="MarginContainer" parent="TextureRect/CenterContainer/TextureRect/VBoxContainer"]
editor/display_folded = true
margin_top = 613.0
margin_right = 1572.0
margin_bottom = 762.0
custom_constants/margin_top = 15
custom_constants/margin_bottom = 5

[node name="HBoxCodeSequence" type="HBoxContainer" parent="TextureRect/CenterContainer/TextureRect/VBoxContainer/CodeSequence"]
margin_top = 15.0
margin_right = 1572.0
margin_bottom = 144.0
custom_constants/separation = 100
alignment = 1

[node name="C1" type="Label" parent="TextureRect/CenterContainer/TextureRect/VBoxContainer/CodeSequence/HBoxCodeSequence"]
margin_left = 310.0
margin_right = 473.0
margin_bottom = 129.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.666667, 0.4, 0.647059, 1 )
text = "FÜNF"

[node name="C2" type="Label" parent="TextureRect/CenterContainer/TextureRect/VBoxContainer/CodeSequence/HBoxCodeSequence"]
margin_left = 573.0
margin_right = 736.0
margin_bottom = 129.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.666667, 0.4, 0.647059, 1 )
text = "FÜNF"

[node name="C3" type="Label" parent="TextureRect/CenterContainer/TextureRect/VBoxContainer/CodeSequence/HBoxCodeSequence"]
margin_left = 836.0
margin_right = 999.0
margin_bottom = 129.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.666667, 0.4, 0.647059, 1 )
text = "FÜNF"

[node name="C4" type="Label" parent="TextureRect/CenterContainer/TextureRect/VBoxContainer/CodeSequence/HBoxCodeSequence"]
margin_left = 1099.0
margin_right = 1262.0
margin_bottom = 129.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.666667, 0.4, 0.647059, 1 )
text = "FÜNF"

[node name="CodeButtons" type="MarginContainer" parent="TextureRect/CenterContainer/TextureRect/VBoxContainer"]
margin_top = 766.0
margin_right = 1572.0
margin_bottom = 1021.0
custom_constants/margin_top = 25

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/CenterContainer/TextureRect/VBoxContainer/CodeButtons"]
margin_top = 25.0
margin_right = 1572.0
margin_bottom = 255.0
custom_constants/separation = 40
alignment = 1

[node name="EINS" type="TextureButton" parent="TextureRect/CenterContainer/TextureRect/VBoxContainer/CodeButtons/HBoxContainer"]
margin_left = 131.0
margin_right = 361.0
margin_bottom = 230.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )

[node name="ZWEI" type="TextureButton" parent="TextureRect/CenterContainer/TextureRect/VBoxContainer/CodeButtons/HBoxContainer"]
margin_left = 401.0
margin_right = 631.0
margin_bottom = 230.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )

[node name="DREI" type="TextureButton" parent="TextureRect/CenterContainer/TextureRect/VBoxContainer/CodeButtons/HBoxContainer"]
margin_left = 671.0
margin_right = 901.0
margin_bottom = 230.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )

[node name="VIER" type="TextureButton" parent="TextureRect/CenterContainer/TextureRect/VBoxContainer/CodeButtons/HBoxContainer"]
margin_left = 941.0
margin_right = 1171.0
margin_bottom = 230.0
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 15 )

[node name="FÜNF" type="TextureButton" parent="TextureRect/CenterContainer/TextureRect/VBoxContainer/CodeButtons/HBoxContainer"]
margin_left = 1211.0
margin_right = 1441.0
margin_bottom = 230.0
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 17 )

[node name="Close" type="TextureButton" parent="TextureRect/CenterContainer/TextureRect"]
margin_left = 1385.35
margin_top = 77.5992
margin_right = 1487.35
margin_bottom = 178.599
texture_normal = ExtResource( 18 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="TextureRect/CenterContainer/TextureRect"]
anims/WobbleWindow = SubResource( 1 )
[connection signal="pressed" from="TextureRect/CenterContainer/TextureRect/Close" to="." method="_on_Close_pressed"]
[connection signal="animation_finished" from="TextureRect/CenterContainer/TextureRect/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
